Change MQ for footer to fix wrapping bug

--- a/app/assets/stylesheets/layout/common/_footer.scss
+++ b/app/assets/stylesheets/layout/common/_footer.scss
@@ -90,7 +90,7 @@
 .l-footer-secondary__list--left {
   @include column(12);
 
-  @include respond-to($mq-l) {
+  @include respond-to(65.125em) {
     @include column(4);
   }
 }
@@ -98,7 +98,7 @@
 .l-footer-secondary__list--right {
   @include column(12);
 
-  @include respond-to($mq-l) {
+  @include respond-to(65.125em) {
     @include column(8);
     text-align: right;
     float: right;
